original/tests%20231224161151/compiler_output/CompilerOutput-EvenOddPalindrome_91_1Test.java.txt
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231224161151/test_cases/EvenOddPalindrome_91_1Test.java:12: error: isPalindrome(int) has private access in EvenOddPalindrome
        assertTrue(EvenOddPalindrome.isPalindrome(121));
                                    ^
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231224161151/test_cases/EvenOddPalindrome_91_1Test.java:13: error: isPalindrome(int) has private access in EvenOddPalindrome
        assertTrue(EvenOddPalindrome.isPalindrome(12321));
                                    ^
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231224161151/test_cases/EvenOddPalindrome_91_1Test.java:14: error: isPalindrome(int) has private access in EvenOddPalindrome
        assertTrue(EvenOddPalindrome.isPalindrome(1234321));
                                    ^
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231224161151/test_cases/EvenOddPalindrome_91_1Test.java:15: error: isPalindrome(int) has private access in EvenOddPalindrome
        assertFalse(EvenOddPalindrome.isPalindrome(12345));
                                     ^
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231224161151/test_cases/EvenOddPalindrome_91_1Test.java:16: error: isPalindrome(int) has private access in EvenOddPalindrome
        assertFalse(EvenOddPalindrome.isPalindrome(123456));
                                     ^
5 errors
